--- a/restooo/src/components/Navbar/Navbar.css
+++ b/restooo/src/components/Navbar/Navbar.css
@@ -77,7 +77,7 @@
     z-index: 5;
 }
 
-.app__navbar-smallscreen_overline .overline__close {
+.app__navbar-smallscreen_overlay .overlay__close {
     font-size: 27px;
     color: var(--color-golden);
     cursor: pointer;
