--- a/restooo/src/container/Header/Header.css
+++ b/restooo/src/container/Header/Header.css
@@ -1,5 +1,5 @@
 .app__header {
-    background: var(--color-black);
+    background-color: var(--color-black);
 }
 
 .app__header-h1 {
@@ -8,7 +8,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     line-height: 117px;
-    font-size: 90px;
+    font-size: 80px; 
 
 }
 
