--- a/restooo/src/container/Menu/SpecialMenu.css
+++ b/restooo/src/container/Menu/SpecialMenu.css
@@ -38,7 +38,7 @@
     flex-direction: column;
 }
 .app__specialMenu-menu_img {
-    width: 410px;
+    width: 350px;
     margin: 0 2rem;
     
 }
@@ -47,7 +47,11 @@
     width: 100%;
     height: auto;
 }
-
+.app__specialMenu-menu_img_foots img {
+    width: 400px; 
+   height: auto;
+   padding: 30px;
+}
 .app__specialMenu_menu_items {
     display: flex;
     flex-direction: column;
