--- a/restooo/src/components/Menuitem/MenuItem.css
+++ b/restooo/src/components/Menuitem/MenuItem.css
@@ -9,11 +9,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .app__menuitem-sub {
     width: 100%;
     margin-top: 0.2rem;
+    margin-left: 10px;
 }
 
 .app__menuitem-name {
